# template-python

./: .gitignore  config.py  mkdocs.yml  pyproject.toml  settings.toml
template_python/: __init__.py
