[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Felipe Augusto <felipeaugustosilva94@gmail.com>"]
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
